--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         </section>
     </header>
     
+    <h4 class="h4Welcome">Welcome to <br> <span> District Tonkin </span></h4>
     <div class= 'welcome'>
-        <h4>Welcome to <br> <span> District Tonkin </span></h4>
         <img src="./img/district-tonkin-nickie.jpeg" alt="first image Missing">
         <p>We opened District Tonkin with one goal in mind: giving our guests a unique, delicious, and unforgettable experience. Our menu reflects centuries of family cooking, offering traditional and innovative dishes, skillfully cooked to perfection. Every single item we serve is carefully prepared to dazzle your senses, so browse our site and come by for some authentic <br> street food. <br>
             The best things often occur in the meeting of two worlds. In the unexpected combinations that create something new. The best of both worlds together to invent new tastes and new experiences. Forging new traditions and making them your own. In Hanoi, this is something we learned long ago, by combing the French and Vietnamese kitchens to create the <br> Banh Mì.
