book a table done
need some style and backend
JS is working fine

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </span>
             <h6 class="orderSpan">Order Take away</h6>
             <div class="telNumber">
-                <i class="fa-thin fa-phone-flip"></i>
+                <img src="./img/phone-flip-solid.svg" alt="phone-missing">
                 <p>+45 53 89 86 98</p>
             </div>
         </section>
@@ -120,13 +120,6 @@
         <p class="copyright">Copyrights 2022</p>
         <img src="./img/illusttration-4.png" alt="footer ilustration missing">
     </footer>
-    <div class="popUpBackground">
-        <h1>Are you a group of <br> 8 people or more?</h1>
-        <div class="stroke"></div>
-        <button onclick="moreThen8()" class="middle-btn">Yes</button>
-        <button onclick="lessThen8()" class="middle-btn">No</button>
-    </div>
-
     <script src="app.js"></script>
 </body>
 
