--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <nav id="navbar">
-            <a class="nav-btn" href="menus.html">Menu</a>
+            <a class="nav-btn" href="./menu.html">Menu</a>
             <img onclick="refreshPage()" src="./img/logo-white.png" alt="header Logo Missing">
             <div onclick='popUp()' class="nav-btn">Book a table</div>
         </nav>
