--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- we should put icon! <link rel="icon" href="" type="img/x-icon">-->
+    <link rel="icon" href="./img/logo-white.png" type="img/x-icon">
     <title>District-Tonkin</title>
     <meta name="description" content="Koge map">
     <meta name="keywords" content="KØGE Koge Visit-koge map travel">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Imbue:opsz,wght@10..100,700&display=swap" rel="stylesheet">
+    <link rel="icon" href="./img/logo-white.png" type="img/x-icon">
+  
 
 </head>
 
@@ -77,7 +76,7 @@
         </div>
     </section>
     <section id="location">
-        <button class="middle-btn">See more</button>
+        <a href="./menu.html" class="middle-btn">See more</a>
         <img class='womanWithBike' src="./img/illustration-3.png" alt="ilustration 3 missing">
         <h3>Location</h3>
         <h5 onclick="showLocation1()">Store Kongensgade 71</h5>
@@ -93,11 +92,6 @@
         <div class="locationInfo">
         </div>
     </section>
-    <h3 class='alertForBooking'>
-        *Note that we don't do table reservations for parties of less than 8 people.
-        Drop by and we will find a table for you!
-    </h3>
-
     <footer>
         <div class="childFooter">
             <h3>Contact</h3>
