--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- we should put icon! <link rel="icon" href="" type="img/x-icon">-->
-    <link rel="icon" href="./img/logo-white.png" type="img/x-icon">
+    <link rel="icon" href="./img/icon.jpg" type="img/x-icon">
     <title>District-Tonkin</title>
     <meta name="description" content="Koge map">
     <meta name="keywords" content="KØGE Koge Visit-koge map travel">
