final icon for browser

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- we should put icon! <link rel="icon" href="" type="img/x-icon">-->
-    <link rel="icon" href="./img/browserTab.jpg" type="img/x-icon">
+    <!-- we should put icon!-->
+    <link rel="icon" href="./img/icon2-07.png" type="img/x-icon">
     <title>District-Tonkin</title>
     <meta name="description" content="Koge map">
     <meta name="keywords" content="KØGE Koge Visit-koge map travel">
