--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
         <div class="childFooter">
             <h3>Social media</h3>
-            <p>Follow us on</p>
+            <p>Follow us on:</p>
             <p>Facebook</p>
             <p>Instagram</p>
         </div>
