fix a lot of things

--- a/menu.html
+++ b/menu.html
@@ -18,6 +18,16 @@
     </head>
 </head>
 <body>
+    <div id="header">
+        <div id="nav">
+            <a class="nav-btn-menu" href="./menu.html">Menu</a>
+            <img onclick="refreshPage()" src="./img/logo-black.png" alt="header Logo Missing">
+            <div onclick='popUp()' class="nav-btn-menu">Book a table</div>
+        </div>
+        <div id="section">
+
+        </div>
+    </div>
     <main id="main-menu">
         
     </main>
