--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <nav id="navbar">
             <a class="nav-btn" href="./menu.html">Menu</a>
-            <img onclick="refreshPage()" src="./img/logo-white.png" alt="header Logo Missing">
+            <a href="index.html"><img  src="./img/logo-white.png" alt="header Logo Missing"></a>
             <div onclick='popUp()' class="nav-btn">Book a table</div>
         </nav>
         <video autoplay loop id="myVideo">
