--- a/menu.html
+++ b/menu.html
@@ -20,18 +20,20 @@
 <body>
     <div id="header">
         <div id="nav">
-            <a class="nav-btn-menu" href="./menu.html">Menu</a>
-            <img onclick="refreshPage()" src="./img/logo-black.png" alt="header Logo Missing">
+            <a class="nav-btn-menu" href="./index.html">Home</a>
+            <a href="menu.html"><img src="./img/logo-black.png" alt="header Logo Missing"></a>
             <div onclick='popUp()' class="nav-btn-menu">Book a table</div>
         </div>
         <div id="section">
-
+            <h1>Menu</h1>
+            <p>The celebration of our natural flair for reinvention, by taking something old and making it new, we reimagining it in our own vision and forge our own path. Creating new tastes, new experiences and new traditions. </p>
+            <div></div>
         </div>
     </div>
     <main id="main-menu">
         
     </main>
-
+   
     <footer>
         <div class="childFooter">
             <h3>Contact</h3>
@@ -54,6 +56,7 @@
         <p class="copyright">Copyrights 2022</p>
         <img src="./img/illusttration-4.png" alt="footer ilustration missing">
     </footer>
+    <script src="./app.js"></script>
     
     <script src="./javaScript.js"></script>
 </body>
