illustration for footer and phone icon

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav id="navbar">
             <a class="nav-btn" href="./menu.html">Menu</a>
             <a href="index.html"><img  src="./img/logo-white.png" alt="header Logo Missing"></a>
-            <div onclick='popUp()' class="nav-btn">Book a table</div>
+            <div onclick="popUp()" class="nav-btn">Book a table</div>
         </nav>
         <video autoplay loop id="myVideo">
             <source src="./img/video-facebook.mp4" type="video/mp4">
@@ -29,18 +29,18 @@
         <section>
             <h1>District Tonkin</h1>
             <span class="littleText">
-                <p class='est'>EST.2015</p> <br>
+                <p class="est">EST.2015</p> <br>
                 <p>/Vietnamese Cuisine/</p>
             </span>
             <h6 class="orderSpan">Order Take away</h6>
             <div class="telNumber">
-                <img src="./img/phone-flip-solid.svg" alt="phone-missing">
+                <img src="img/phone-solid-white.png" alt="phone-missing">
                 <p>+45 53 89 86 98</p>
             </div>
         </section>
     </header>
     <h4 class="h4Welcome">Welcome to <br> <span> District Tonkin </span></h4>
-    <div class='welcome'>
+    <div class="welcome">
         <img src="./img/district-tonkin-nickie.jpeg" alt="first image Missing">
         <p>We opened District Tonkin with one goal in mind: giving our guests a unique, delicious, and unforgettable
             experience. Our menu reflects centuries of family cooking, offering traditional and innovative dishes,
@@ -77,8 +77,8 @@
     </section>
     <section id="location">
         <a href="./menu.html" class="middle-btn">See more</a>
-        <img class='womanWithBike' src="./img/illustration-3.png" alt="ilustration 3 missing">
-        <h3>Location</h3>
+        <img class="womanWithBike" src="./img/illustration-3.png" alt="ilustration 3 missing">
+        <h3>Locations</h3>
         <h5 onclick="showLocation1()">Store Kongensgade 71</h5>
         <div class="locationInfo">
         </div>
@@ -112,7 +112,7 @@
             <p>Order take-away</p>
         </div>
         <p class="copyright">Copyrights 2022</p>
-        <img src="./img/illusttration-4.png" alt="footer ilustration missing">
+        <img src="./img/illustratio-for-footer.png" alt="footer ilustration missing">
     </footer>
     <script src="app.js"></script>
 </body>
