--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
         </div>
         <div class="childFooter">
             <h3>Delivery</h3>
-            <i class="wolt"></i>
+            <i class="wolt">
+			<img src="img/wolt-icon.png" alt="wolt"></i>
             <p>Order take-away</p>
         </div>
         <p class="copyright">Copyrights 2022</p>
