link to social media
link to social media

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
         <div class="childFooter">
             <h3>Social media</h3>
             <p>Follow us on:</p>
-            <p>Facebook</p>
-            <p>Instagram</p>
+            <p><a href="https://www.facebook.com/districttonkin/">Facebook</a></p>
+			<p><a href="https://www.instagram.com/districttonkin/?hl=en">Instagram</a></p>
         </div>
         <div class="childFooter">
             <h3>Delivery</h3>
