--- a/menu.html
+++ b/menu.html
@@ -29,7 +29,9 @@
             <p>The celebration of our natural flair for reinvention, by taking something old and making it new, we reimagining it in our own vision and forge our own path. Creating new tastes, new experiences and new traditions. </p>
             <div></div>
         </div>
+        
     </div>
+    <img id="background" src="./img/Cages_2.gif" alt="gif is missing ">
     <main id="main-menu">
         
     </main>
