--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <!-- we should put icon!-->
     <link rel="icon" href="./img/browserTab.png" type="img/x-icon">
     <title>District-Tonkin</title>
-    <meta name="description" content="Koge map">
-    <meta name="keywords" content="KØGE Koge Visit-koge map travel">
+    <meta name="description" content="district tonkin vietnamese restaurant take away take-away vesterbro menu store kongensgade st ">
+    <meta name="keywords" content="District Tonkin">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./img/logo-white.png" type="img/x-icon">
   
@@ -18,6 +18,7 @@
 
 <body>
     <header>
+        
         <nav id="navbar">
             <a class="nav-btn" href="./menu.html">Menu</a>
             <a href="index.html"><img  src="./img/logo-white.png" alt="header Logo Missing"></a>
@@ -103,17 +104,18 @@
         <div class="childFooter">
             <h3>Social media</h3>
             <p>Follow us on:</p>
-            <p><a href="https://www.facebook.com/districttonkin/">Facebook</a></p>
-			<p><a href="https://www.instagram.com/districttonkin/?hl=en">Instagram</a></p>
+            <a href="https://www.facebook.com/districttonkin/">Facebook</a>
+			<a href="https://www.instagram.com/districttonkin/?hl=en">Instagram</a>
+            <a href=""></a>
         </div>
         <div class="childFooter">
             <h3>Delivery</h3>
 			<p>Order take-away</p>
-            <i class="wolt">
-			<img src="img/wolt-icon.png" alt="wolt"></i>
+            <a href="https://wolt.com/en/dnk/copenhagen/restaurant/district-tonkin-vesterbrogade"><img class="wolt" src="img/wolt-icon.png" alt="wolt"></a>
+            
         </div>
         <p class="copyright">Copyrights 2022</p>
-        <img src="./img/illustratio-for-footer.png" alt="footer ilustration missing">
+        <img class= 'ilustrationFour' src="./img/illustratio-for-footer.png" alt="footer ilustration missing">
     </footer>
     <script src="app.js"></script>
 </body>
