--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div onclick="popUp()" class="nav-btn">Book a table</div>
         </nav>
         <video autoplay loop id="myVideo">
-            <source src="./img/Tonkin-Home Video-Color.mp4" type="video/mp4">
+            <source src="./img/Tonkin-Home-Video-Color.mp4" type="video/mp4">
         </video>
         <section>
             <h1>District Tonkin</h1>
