logo go to home

--- a/menu.html
+++ b/menu.html
@@ -22,7 +22,7 @@
     <div id="header">
         <div id="nav">
             <a class="nav-btn-menu" href="./index.html">Home</a>
-            <a href="menu.html"><img src="./img/logo-black.png" alt="header Logo Missing"></a>
+            <a href="index.html"><img src="./img/logo-black.png" alt="header Logo Missing"></a>
             <div onclick='popUp()' class="nav-btn-menu">Book a table</div>
         </div>
         <div id="section">
