--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="index.html"><img  src="./img/logo-white.png" alt="header Logo Missing"></a>
             <div onclick="popUp()" class="nav-btn">Book a table</div>
         </nav>
-        <video autoplay loop id="myVideo">
+        <video  loop play id="myVideo" autoplay muted>
             <source src="./img/TonkinVideo.mp4" type="video/mp4">
         </video>
         <section>
