--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <img src="img/phone-solid-white.png" alt="phone-missing">
                 <p>+45 53 89 86 98</p>
             </div>
+            <div class="opacitys"></div>
         </section>
     </header>
     <h4 class="h4Welcome">Welcome to <br> <span> District Tonkin </span></h4>
