--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <meta name="keywords" content="District Tonkin">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./img/logo-white.png" type="img/x-icon">
-  
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Imbue:opsz,wght@10..100,800&display=swap" rel="stylesheet">
 
 </head>
 
@@ -47,11 +49,11 @@
         <p>We opened District Tonkin with one goal in mind: giving our guests a unique, delicious, and unforgettable
             experience. Our menu reflects centuries of family cooking, offering traditional and innovative dishes,
             skillfully cooked to perfection. Every single item we serve is carefully prepared to dazzle your senses, so
-            browse our site and come by for some authentic <br> street food. <br>
+            browse our site and come by for some authentic street food.
             The best things often occur in the meeting of two worlds. In the unexpected combinations that create
             something new. The best of both worlds together to invent new tastes and new experiences. Forging new
             traditions and making them your own. In Hanoi, this is something we learned long ago, by combing the French
-            and Vietnamese kitchens to create the <br> Banh Mì.
+            and Vietnamese kitchens to create the Banh Mì.
         </p>
         <img id="ilustration2" src="./img/illustration-2.png" alt="ilustratiton 1">
     </div>
@@ -59,7 +61,7 @@
     <section class="dishes">
         <div>
             <img src="./img/bahn-mi.jpeg" alt="sandwich Missing">
-            <h6>Bahn mi</h6>
+            <h6>Bánh mì</h6>
             <p>Crispy, warm Vietnamese sandwiches.
                 All served with District Tonkin's homemade sauces, pepper mayo, cucumber, leeks, coriander and chili.
             </p>
@@ -72,7 +74,7 @@
         </div>
         <div>
             <img src="./img/photo-facebook-food.jpeg" alt="chair missing">
-            <h6>Pho</h6>
+            <h6>Phở</h6>
             <p>Vietnam's national dish on beaf served with slices of rare flank steak, topped with TONKIN's fresh herb
                 mix, lime and chili. </p>
         </div>
@@ -144,10 +146,18 @@
         </div>
         <div class="childFooter">
             <h3>Social media</h3>
-            <p>Follow us on:</p>
-            <a href="https://www.facebook.com/districttonkin/">Facebook</a>
-			<a href="https://www.instagram.com/districttonkin/?hl=en">Instagram</a>
-            <a href=""></a>
+            <div>
+                <a href="https://www.facebook.com/districttonkin/"></a>
+                <p>Facebook</p>
+            </div>
+            <div>
+                <a href="https://www.instagram.com/districttonkin/?hl=en"></a>
+                <p>Instagram</p>
+            </div>
+			<div>
+                <a href="https://www.tripadvisor.com/Restaurant_Review-g189541-d7705278-Reviews-District_Tonkin-Copenhagen_Zealand.html"><img class="tripAdvisor" src="./img/Tripadvisor-Logo.png" alt=""></a>
+            </div>
+            
         </div>
         <div class="childFooter">
             <h3>Delivery</h3>
