--- a/menu.html
+++ b/menu.html
@@ -48,14 +48,13 @@
         </div>
         <div class="childFooter">
             <h3>Social media</h3>
-            <p>Follow us on</p>
             <a href="https://www.facebook.com/districttonkin/">Facebook</a>
 			<a href="https://www.instagram.com/districttonkin/?hl=en">Instagram</a>
         </div>
         <div class="childFooter">
             <h3>Delivery</h3>
             <p>Order take-away</p>
-            <img class="wolt" src="img/wolt-icon.png" alt="wolt">
+            <a href="https://wolt.com/en/dnk/copenhagen/restaurant/district-tonkin-vesterbrogade"><img class="wolt" src="img/wolt-icon.png" alt="wolt"></a>
         </div>
         <p class="copyright">Copyrights 2022</p>
         <img class= 'ilustrationFour' src="./img/illustratio-for-footer.png" alt="footer ilustration missing">
