--- a/menu.html
+++ b/menu.html
@@ -15,7 +15,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Imbue:opsz,wght@10..100,700&display=swap" rel="stylesheet">
-    
     </head>
 </head>
 <body>
@@ -48,8 +47,19 @@
         </div>
         <div class="childFooter">
             <h3>Social media</h3>
-            <a href="https://www.facebook.com/districttonkin/">Facebook</a>
-			<a href="https://www.instagram.com/districttonkin/?hl=en">Instagram</a>
+            <div>
+                <a href="https://www.facebook.com/districttonkin/"><img class="tripAdvisor" src="./img/facebook-brands.svg" alt="fb missing"></a>
+                <p>Facebook</p>
+            </div>
+            <div>
+                <a href="https://www.instagram.com/districttonkin/?hl=en"><img class="tripAdvisor" src="./img/instagram-brands(2).svg" alt="instagram missing"></a>
+                <p>Instagram</p>
+            </div>
+			<div>
+                <a href="https://www.tripadvisor.com/Restaurant_Review-g189541-d7705278-Reviews-District_Tonkin-Copenhagen_Zealand.html"><img class="tripAdvisor" src="./img/Tripadvisor-Logo.png" alt=""></a>
+                <p>Tripadvisor</p>
+            </div>
+            
         </div>
         <div class="childFooter">
             <h3>Delivery</h3>
