please let me finish

--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
             <p class="paraForLocation middle-btn">Show on map</p>
             <div></div>
         </div>
+    <img class="womanWithBike" src="./img/illustration-3.png" alt="ilustration 3 missing">
+       
     </section>
     <!--
 
